--- a/roles/jumphost-conf/tasks/main.yml
+++ b/roles/jumphost-conf/tasks/main.yml
@@ -5,10 +5,8 @@
 
 - name: Install packages
   yum:
-    name: "{{ item }}"
+    name: "{{ jump_packages }}"
     state: present
-  with_items:
-    - "{{ jump_packages }}"
 
 - name: Copy pip requirements file to target
   template:
