--- a/roles/users/tasks/create_openrc.yml
+++ b/roles/users/tasks/create_openrc.yml
@@ -5,12 +5,15 @@
 - name: Make Nebula cloud config file for admin users
   template:
     src: "templates/nebula_openrc.sh"
-    dest: "/home/{{ item.name }}/nebula_openrc.sh"
-    owner: "{{ item.name }}"
+    dest: "/home/{{ user.name }}/nebula_openrc.sh"
+    owner: "{{ user.name }}"
     force: no
   with_items: "{{ users }}"
-  when: "( ansible_hostname.find('jump') != -1 and item.openstack_username is defined and ('jump' in item.user_hosts or 'all' in item.user_hosts ) )"
+  when:
+    - inventory_hostname in groups['jumphosts']
+    - item.state is undefined or item.state == 'present'
   loop_control:
-    label: "{{ item.name }}"
+    label: "{{ user.name }}"
+    loop_var: "user"
   tags: [nebula]
 ...
