--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -8,7 +8,6 @@
 - name: Add admin group
   group:
     name: admin
-#    gid: "{{ admingid }}"
     state: present
 
 - name: Add sudoers without passwd to admin group
@@ -47,8 +46,10 @@
   include_tasks: create_openrc.yml
   static: no
   when:
-    - ansible_hostname.find('jump') != -1
-    - item.0.state is undefined or item.0.state == 'present'
+    - inventory_hostname in groups['jumphosts']
+    - item.state is undefined or item.state == 'present'
+  with_items:
+    - "{{ users }}"
 
 - name: Create SSH config in jumphost
   include_tasks: ssh_config.yml
