Add Jenkins master deployment
Jenkins is not yet fully configured, only basic SW installation done.

--- a/group_vars/all/global_vars.yml
+++ b/group_vars/all/global_vars.yml
@@ -3,5 +3,6 @@ centos_image_name: "CentOS 7 x86_64"
 
 jump_flavor: "nbl-n1-small"
 db_flavor:   "nbl-n1-small"
+jenkins_flavor: "nbl-n1-small"
 
 jumphost_ansible_version: "2.7.0.0"
