--- a/roles/openstack-secgroups/tasks/jumphost.yml
+++ b/roles/openstack-secgroups/tasks/jumphost.yml
@@ -13,10 +13,15 @@
     protocol: tcp
     port_range_min: 22
     port_range_max: 22
-    remote_ip_prefix: 0.0.0.0/0
+    remote_ip_prefix: "0.0.0.0/0"
 
 - name: jumphost-rule-icmp
   os_security_group_rule:
     security_group: jumphost
     protocol: icmp
-    remote_ip_prefix: 0.0.0.0/0
+    remote_ip_prefix: "0.0.0.0/0"
+
+- name: Allow all in private net
+  os_security_group_rule:
+    security_group: jumphost
+    remote_ip_prefix: "{{ os_net_cidr }}"
