--- a/roles/jenkinsmaster-conf/tasks/main.yml
+++ b/roles/jenkinsmaster-conf/tasks/main.yml
@@ -1,27 +1,9 @@
 ---
-- name: Install EPEL repository
-  yum:
-    name: epel-release
+- import_tasks: sw_install.yml
+  tags: [sw]
 
-- name: Install packages with yum
-  yum:
-    name: "{{ jenkins_yum_deps }}"
-    state: present
+- import_tasks: add-credentials.yml
+  tags: [credentials]
 
-- name: Install python modules
-  pip:
-    name: "{{ item }}"
-    state: present
-  loop: "{{ jenkins_python_deps }}"
-
-- name: Install Java8
-  include_role:
-    name: geerlingguy.java
-  vars:
-    java_packages:
-      - java-1.8.0-openjdk
-
-- name: Install Jenkins
-  include_role:
-    name: ansible-role-jenkins
-  notify: restart jenkins
+- import_tasks: add-slaves.yml
+  tags: [slave]
