Correct openrc template file name

--- a/roles/users/tasks/create_openrc.yml
+++ b/roles/users/tasks/create_openrc.yml
@@ -4,8 +4,8 @@
 # openrc file for Nebula
 - name: Make Nebula cloud config file for admin users
   template:
-    src: "templates/nebula_openrc.sh"
-    dest: "/home/{{ user.name }}/nebula_openrc.sh.j2"
+    src: "templates/nebula_openrc.sh.j2"
+    dest: "/home/{{ user.name }}/nebula_openrc.sh"
     owner: "{{ user.name }}"
     force: no
   with_items: "{{ users }}"
