Fix Jenkins deployment to work with Ansible 2.9.2

--- a/roles/jenkinsmaster-conf/tasks/sw_install.yml
+++ b/roles/jenkinsmaster-conf/tasks/sw_install.yml
@@ -22,7 +22,7 @@
       - java-1.8.0-openjdk
 
 - name: Install Jenkins
-  include_role:
+  import_role:
     name: ansible-role-jenkins
   notify: restart jenkins
 
